fixed text align for floating links

--- a/styles/index.css
+++ b/styles/index.css
@@ -150,7 +150,6 @@ body {
   flex-wrap: wrap;
   /* max-width: calc(100% - 10rem); */
   justify-content: center;
-  text-align: center;
 }
 
 .floating-link {
@@ -160,7 +159,7 @@ body {
   transition: all 0.5s ease-in-out, transform 0.2s ease-in-out;
   width: fit-content;
   height: fit-content;
-  display: inline-block;
+  text-align: center;
 }
 
 .floating-link:not(:last-of-type) {
